codesplitted/CodeCuda/ERROR
decrypt.cu(205): error: "start" has already been declared in the current scope
      auto start = std::chrono::high_resolution_clock::now();
           ^

decrypt.cu(236): error: "end" has already been declared in the current scope
      auto end = std::chrono::high_resolution_clock::now();
           ^

2 errors detected in the compilation of "decrypt.cu".
